Improve dashboard modal layout and controls

--- a/index.html
+++ b/index.html
@@ -528,22 +528,22 @@
       --dashboard-border:rgba(15,23,42,0.08);
       --dashboard-shadow:0 22px 48px rgba(15,23,42,0.12);
       --dashboard-header-bg:#f8fafc;
-      --dashboard-grid-stripe:rgba(148,163,184,0.08);
-      --dashboard-status-ok:rgba(16,185,129,0.12);
+      --dashboard-grid-stripe:rgba(148,163,184,0.06);
+      --dashboard-status-ok:rgba(34,197,94,0.1);
       --dashboard-status-ok-text:#047857;
-      --dashboard-status-mid:rgba(234,179,8,0.16);
+      --dashboard-status-mid:rgba(234,179,8,0.14);
       --dashboard-status-mid-text:#b45309;
-      --dashboard-status-ko:rgba(239,68,68,0.14);
+      --dashboard-status-ko:rgba(239,68,68,0.12);
       --dashboard-status-ko-text:#b91c1c;
-      --dashboard-status-na:rgba(148,163,184,0.18);
+      --dashboard-status-na:rgba(148,163,184,0.14);
       --dashboard-status-na-text:#475569;
     }
-    .practice-dashboard.goal-modal{ display:flex; align-items:center; justify-content:center; padding:clamp(1.5rem,3vw,2.5rem); }
+    .practice-dashboard.goal-modal{ display:flex; align-items:center; justify-content:center; padding:clamp(1.5rem,4vw,3rem); }
     .practice-dashboard.goal-modal .modal-card{ padding:0; background:transparent; box-shadow:none; border:0; }
     .practice-dashboard__card{
       position:relative;
-      width:min(980px,calc(100vw - 2rem));
-      max-height:clamp(480px,72vh,840px);
+      width:min(1120px,90vw);
+      max-height:min(88vh,940px);
       display:grid;
       grid-template-rows:auto 1fr auto;
       gap:0;
@@ -559,19 +559,19 @@
       flex-wrap:wrap;
       align-items:flex-start;
       justify-content:space-between;
-      gap:1.25rem;
-      padding:1.75rem clamp(1.5rem,3vw,2.25rem) 1.4rem;
+      gap:1.5rem;
+      padding:clamp(1.6rem,2.8vw,2.1rem) clamp(1.6rem,3vw,2.4rem) clamp(1.2rem,2.4vw,1.6rem);
       background:#fff;
       border-bottom:1px solid rgba(148,163,184,0.16);
     }
-    .practice-dashboard__title-group{ display:flex; flex-direction:column; gap:.4rem; max-width:min(460px,100%); }
-    .practice-dashboard__eyebrow{ font-size:.7rem; text-transform:uppercase; letter-spacing:.16em; color:#94a3b8; font-weight:700; }
-    .practice-dashboard__title{ font-size:1.6rem; font-weight:700; color:#0f172a; letter-spacing:-.02em; }
-    .practice-dashboard__subtitle{ font-size:.9rem; color:#475569; line-height:1.6; max-width:560px; }
+    .practice-dashboard__title-group{ display:flex; flex-direction:column; gap:.55rem; max-width:min(520px,100%); }
+    .practice-dashboard__context{ display:inline-flex; align-items:center; gap:.4rem; padding:.35rem .8rem; border-radius:.85rem; background:rgba(59,130,246,0.08); color:#1d4ed8; font-size:.78rem; font-weight:600; letter-spacing:.02em; width:max-content; }
+    .practice-dashboard__title{ font-size:1.65rem; font-weight:700; color:#0f172a; letter-spacing:-.02em; margin:0; }
+    .practice-dashboard__subtitle{ font-size:.92rem; color:#475569; line-height:1.6; max-width:600px; margin:0; }
     .practice-dashboard__header-actions{
       display:flex;
-      align-items:center;
-      gap:.75rem;
+      align-items:flex-end;
+      gap:.85rem;
       flex-wrap:wrap;
       justify-content:flex-end;
     }
@@ -580,22 +580,22 @@
     .practice-dashboard__close:focus-visible{ outline:3px solid var(--accent-200); outline-offset:2px; }
     .practice-dashboard__body{
       overflow-y:auto;
-      padding:1.75rem clamp(1.5rem,3vw,2.25rem);
+      padding:clamp(1.5rem,2.6vw,2.1rem) clamp(1.5rem,3vw,2.4rem);
       display:flex;
       flex-direction:column;
-      gap:1.5rem;
+      gap:1.35rem;
       background:#f8fafc;
       min-height:0;
     }
     .practice-dashboard__section{
       display:flex;
       flex-direction:column;
-      gap:1.1rem;
+      gap:1rem;
       background:#fff;
       border-radius:1.1rem;
-      padding:clamp(1.2rem,2vw,1.75rem);
+      padding:clamp(1.1rem,2vw,1.65rem);
       border:1px solid rgba(148,163,184,0.14);
-      box-shadow:0 10px 26px rgba(15,23,42,0.08);
+      box-shadow:0 8px 22px rgba(15,23,42,0.07);
     }
     .practice-dashboard__section-head{ display:flex; align-items:flex-start; justify-content:space-between; gap:1rem; flex-wrap:wrap; }
     .practice-dashboard__section-title{ font-weight:700; font-size:1.05rem; color:#0f172a; letter-spacing:-.01em; }
@@ -603,10 +603,10 @@
     .practice-dashboard__chart-panel{
       display:flex;
       flex-direction:column;
-      gap:1.1rem;
+      gap:1rem;
       background:#fff;
       border-radius:1rem;
-      padding:1.1rem clamp(.95rem,2vw,1.5rem);
+      padding:1.05rem clamp(.95rem,2vw,1.45rem);
       border:1px solid rgba(148,163,184,0.14);
       box-shadow:none;
     }
@@ -674,6 +674,8 @@
     .practice-dashboard__filter-label{ font-weight:600; text-transform:uppercase; letter-spacing:.08em; color:#0f172a; }
     .practice-dashboard__filter-select{ border:1px solid rgba(148,163,184,0.35); border-radius:.8rem; padding:.45rem .75rem; font-size:.9rem; color:#0f172a; background:#fff; box-shadow:0 8px 20px rgba(15,23,42,0.05); }
     .practice-dashboard__filter-select:focus-visible{ outline:3px solid var(--accent-200); outline-offset:1px; border-color:var(--accent-400); }
+    .practice-dashboard__filter--inline{ min-width:0; }
+    .practice-dashboard__filter--inline .practice-dashboard__filter-select{ min-width:9.5rem; }
     .practice-dashboard__table-wrapper{
       border-radius:1rem;
       border:1px solid rgba(148,163,184,0.16);
@@ -681,26 +683,29 @@
       overflow:auto;
       box-shadow:none;
       scrollbar-color:#94a3b8 rgba(226,232,240,0.65);
+      padding-bottom:.25rem;
     }
     .practice-dashboard__table-wrapper::-webkit-scrollbar{ height:10px; }
     .practice-dashboard__table-wrapper::-webkit-scrollbar-thumb{ background:rgba(148,163,184,0.45); border-radius:999px; }
     .practice-dashboard__matrix{ width:100%; border-collapse:collapse; table-layout:fixed; min-width:0; }
-    .practice-dashboard__matrix thead th{ position:sticky; top:0; background:var(--dashboard-header-bg); padding:.65rem .85rem; text-align:left; font-size:.7rem; text-transform:uppercase; letter-spacing:.08em; color:#64748b; border-bottom:1px solid rgba(148,163,184,0.2); z-index:2; }
+    .practice-dashboard__matrix thead th{ position:sticky; top:0; background:var(--dashboard-header-bg); padding:.6rem .75rem; text-align:left; font-size:.68rem; text-transform:uppercase; letter-spacing:.08em; color:#64748b; border-bottom:1px solid rgba(148,163,184,0.18); z-index:2; }
     .practice-dashboard__matrix-head-consigne{ width:26%; }
-    .practice-dashboard__matrix-consigne{ background:#fff; padding:.75rem .85rem; font-weight:600; color:#0f172a; text-align:left; }
+    .practice-dashboard__matrix-consigne{ background:#fff; padding:.65rem .85rem; font-weight:600; color:#0f172a; text-align:left; border-bottom:1px solid rgba(148,163,184,0.14); }
     .practice-dashboard__row-meta{ position:absolute; width:1px; height:1px; padding:0; margin:-1px; overflow:hidden; clip:rect(0,0,0,0); white-space:nowrap; border:0; }
-    .practice-dashboard__consigne-name{ font-size:.98rem; }
-    .practice-dashboard__matrix tbody td{ padding:.4rem 0; text-align:center; }
-    .practice-dashboard__matrix tbody tr:nth-child(even){ background:rgba(148,163,184,0.08); }
+    .practice-dashboard__consigne-name{ font-size:.95rem; }
+    .practice-dashboard__matrix tbody td{ padding:.3rem 0; text-align:center; }
+    .practice-dashboard__matrix tbody tr{ border-bottom:1px solid rgba(148,163,184,0.12); }
+    .practice-dashboard__matrix tbody tr:last-child{ border-bottom:none; }
+    .practice-dashboard__matrix tbody tr:nth-child(even){ background:rgba(148,163,184,0.06); }
     .practice-dashboard__cell{
       position:relative;
       width:100%;
-      min-width:2.75rem;
-      padding:.55rem .45rem;
-      border-radius:.6rem;
+      min-width:3.2rem;
+      padding:.45rem .55rem;
+      border-radius:.55rem;
       border:1px solid transparent;
       font-weight:600;
-      font-size:.85rem;
+      font-size:.82rem;
       background:transparent;
       color:#0f172a;
       display:flex;
@@ -709,14 +714,14 @@
       font-variant-numeric:tabular-nums;
       line-height:1.35;
     }
-    .practice-dashboard__cell--ok{ background:var(--dashboard-status-ok); color:var(--dashboard-status-ok-text); border-color:rgba(16,185,129,0.25); }
-    .practice-dashboard__cell--mid{ background:var(--dashboard-status-mid); color:var(--dashboard-status-mid-text); border-color:rgba(234,179,8,0.25); }
-    .practice-dashboard__cell--ko{ background:var(--dashboard-status-ko); color:var(--dashboard-status-ko-text); border-color:rgba(239,68,68,0.2); }
-    .practice-dashboard__cell--na{ background:var(--dashboard-status-na); color:var(--dashboard-status-na-text); border-color:rgba(148,163,184,0.3); }
+    .practice-dashboard__cell--ok{ background:var(--dashboard-status-ok); color:var(--dashboard-status-ok-text); border-color:rgba(34,197,94,0.2); }
+    .practice-dashboard__cell--mid{ background:var(--dashboard-status-mid); color:var(--dashboard-status-mid-text); border-color:rgba(234,179,8,0.22); }
+    .practice-dashboard__cell--ko{ background:var(--dashboard-status-ko); color:var(--dashboard-status-ko-text); border-color:rgba(239,68,68,0.18); }
+    .practice-dashboard__cell--na{ background:var(--dashboard-status-na); color:var(--dashboard-status-na-text); border-color:rgba(148,163,184,0.26); }
     .practice-dashboard__cell--empty{ font-weight:500; color:#94a3b8; }
     .practice-dashboard__cell[data-has-note="1"]::after{ content:""; position:absolute; top:8px; right:8px; width:8px; height:8px; border-radius:999px; background:#38bdf8; }
     .practice-dashboard__cell:focus-visible{ outline:3px solid var(--accent-200); outline-offset:2px; }
-    .practice-dashboard__hint{ font-size:.82rem; color:#64748b; text-align:right; }
+    .practice-dashboard__hint{ font-size:.8rem; color:#64748b; text-align:right; margin-top:.4rem; }
     .practice-dashboard__chart-option{ display:flex; align-items:center; gap:.55rem; padding:.35rem .75rem; border-radius:.75rem; background:#f8fafc; border:1px solid rgba(148,163,184,0.35); font-size:.85rem; color:#1f2937; width:100%; transition:background .15s ease,border-color .15s ease,box-shadow .15s ease; }
     .practice-dashboard__chart-option:hover{ background:#e2e8f0; border-color:rgba(148,163,184,0.55); box-shadow:0 4px 12px rgba(15,23,42,0.08); }
     .practice-dashboard__chart-option input{ accent-color:var(--accent-600); }
